--- a/LiteratureReview/literatureReview.tex
+++ b/LiteratureReview/literatureReview.tex
@@ -98,16 +98,16 @@ are the ones surveyed in the following paper:
 
 \subsubsection{Unikraft \cite{Unikraft}}
 Unikraft is a uni-kernel implementation that claims to be 
-a micro library OS. The major features of Unikraft is:
+a micro library OS. \emph{The major features of Unikraft is:}
 \begin{itemize}
   \item Single address space: Intended to target single applications.
   \item Fully modular system: All drivers and platform libraries can be easily removed.
-  \item Single protection level: No kernel and user space seperation to avoid costly context switching.
-  \item Static linking: Compiler features such as dead code elimination and link time optmization supported. 
+  \item Single protection level: No kernel and user space separation to avoid costly context switching.
+  \item Static linking: Compiler features such as dead code elimination and link time optimization supported. 
   \item POSIX support: Support for legacy applications while still allowing for specialization. 
   \item Platform abstraction: The ability to run on different Hypervisors/VMs. 
 \end{itemize}
-To reach for the principal of modularity. Unikraft consists of 2 major componenents: 
+\emph{To reach for the principal of modularity. Unikraft consists of 2 major components:}
 \begin{itemize}
   \item Micro libraries: Micro-libraries are software components 
   which implement one of the core Unikraft APIs.
@@ -115,7 +115,7 @@ To reach for the principal of modularity. Unikraft consists of 2 major componene
   then compiles all of the micro-libraries, links them,
   and produces one binary per selected platform.
 \end{itemize}
-In terms of performance the following was evaluated: 
+\emph{In terms of performance the following was evaluated:}
 \begin{itemize}
   \item Resource Efficiency (Smaller is Better): Overall, the total VM boot time is dominated by the VMM,
   with Solo5 and Firecracker being the fastest (3ms), QEMU
@@ -132,7 +132,7 @@ In terms of performance the following was evaluated:
   \item Performance of Automatically Ported Apps: The results
   show that the automatically ported app is only 1.5\% slower
   than the manually ported version, and even slightly faster
-  than Linux baremetal.
+  than Linux bare-metal.
 \end{itemize}
 
 \begin{figure}[htbp!] 
@@ -154,7 +154,7 @@ it can further improve performance and demonstrate a
 290\% increase in Memcached throughput.
 OSv is designed as a drop-in replacement for applications that use a
 supported subset of the Linux application binary interface (ABI).
-The following below is the design of OSv: 
+\emph{The following below is the design of OSv:}
 \begin{itemize}
   \item Memory Management: OSv uses virtual memory like
   general purpose OSs.OSv supports demand paging and memory mapping
@@ -183,7 +183,7 @@ multi-kernel approach with the advantages of a Unikernel.The focus of HermitCore
 the mapping of the hardware to
 the software structure rather than full support of the Linux
 API.In a HermitCore system, each NUMA node runs its own HermitCore instance managing all its resources.
-The aims for Hermit core are the following:
+\emph{The aims for Hermit core are the following:}
 \begin{itemize}
   \item Reduction of OS noise.
   \item Predictable runtimes.
@@ -194,15 +194,14 @@ The aims for Hermit core are the following:
   \item Simple integration into existing software stacks of
   compute centers.
 \end{itemize}
-Benchmarks conducted:
+\emph{Benchmarks conducted:}
 \begin{itemize}
   \item Operating System Micro-Benchmarks.
   \item Hourglass Benchmark (For OS Noise).
   \item Inter-kernel Communication Benchmark.
   \item OpenMP Micro-Benchmarks.
 \end{itemize}
-
-There are derived projects from the hermit-core project:
+\emph{The following are derived projects from the hermit-core project:}
 \begin{itemize}
   \item HermitTux \cite{Hermitux} : It is a linux binary compatible Unikernel that can run native linux executables. 
   \item RustyHermit \cite{RustyHermit}: Implementation of the Hermit core Unikernel in Rust. 
@@ -240,12 +239,12 @@ RKOS is an unikernel implemented in Rust which
 offers safety guarantees comparable to implementations which depend on complex runtime
 libraries while being capable of providing predictable application performance demanded
 by real-time applications in a relatively simple implementation. 
-Design decisions for RKOS are as follows:
+\emph{Design decisions for RKOS are as follows:}
 \begin{itemize}
   \item Mutual trust between components allows a shared, uniform address space.
   \item Virtualized runtime environments have uniform hardware configuration.
 \end{itemize}
-Performance Evaluations conducted:
+\emph{Performance Evaluations conducted:}
 \begin{itemize}
   \item Run time memory footprint 
   \item Binary size 
@@ -275,7 +274,7 @@ written in Go called OPS.
 Nanos employs various forms of security measures found in other general purpose operating systems including ASLR and respects page protections 
 that compilers produce.
 
-ASLR:
+\emph{ASLR:}
 
 \begin{itemize}
   \item Stack Randomization
@@ -284,7 +283,7 @@ ASLR:
   \item Binary Randomization
 \end{itemize}
 
-Page Protections:
+\emph{Page Protections:}
 
 \begin{itemize}
   \item Stack Execution off by Default
@@ -299,7 +298,7 @@ Page Protections:
   \item UMIP
 \end{itemize}
 
-Performance Evaluations conducted:
+\emph{Performance Evaluations conducted:}
 \begin{itemize}
   \item Bootup Times.
   \item Requests per second.
@@ -314,13 +313,13 @@ In the test case the bootable disk image consisting
 of a simple DNS server with OS included is shown
 to require only 158 kb of disk space and to require
 5-20\% less CPU-time.
-The contributions of IncludeOS are:
+\emph{The contributions of IncludeOS are:}
 \begin{itemize}
   \item Extreme resource efficiency and footprint.
   \item Efficient deployment process.
   \item Virtualization platform independence.
 \end{itemize}
-The proposed benefits of IncludeOS  in comparison to Linux Kernels are:
+\emph{The proposed benefits of IncludeOS  in comparison to Linux Kernels are:}
 \begin{itemize}
   \item Extremely small disk and memory footprint.
   \item No host or software dependencies, other than
@@ -334,7 +333,7 @@ The proposed benefits of IncludeOS  in comparison to Linux Kernels are:
   number of protected instructions very low.
 \end{itemize}
 
-Performance Evaluations conducted:
+\emph{Performance Evaluations conducted:}
 \begin{itemize}
   \item Bootup times 
   \item Memory performance (i.e The Stream Benchmark)
@@ -343,7 +342,7 @@ Performance Evaluations conducted:
 \subsubsection{Azelea \cite{Azelea}} 
 Azalea is a multi-kernel OS, which consists of Unikernels and a full kernel. Azelea Unikernel provides scalability and parallel performance. 
 The full kernel provides compatibility with POSIX APIs that Unikernel cannot handle. The Full kernel is combined with the Unikernel for 
-side by side partitioning. The Azelea Unikernel is a library OS which consists of the following: 
+side by side partitioning. \emph{The Azelea Unikernel is a library OS which consists of the following:}
 \begin{itemize}
   \item Kernel Functions 
   \item Run time libraries 
@@ -351,14 +350,14 @@ side by side partitioning. The Azelea Unikernel is a library OS which consists o
 \end{itemize}
 A server can run multiple Azelea-unikernels with the number of cores and memory allocated. The Linux install which is a part of 
 the server acts as a driver and that loads each Unikernel or supports communication between other nodes. 
-The contributions of Azelea Uni-kernels are:
+\emph{The contributions of Azelea Uni-kernels are:}
 \begin{itemize}
   \item Lightweight kernel.
   \item Compatibility with legacy application (i.e Support for statically build Linux binaries).
   \item I/O offloading (i.e FWK(Full weight kernel) handles all the I/O offloading so that applications can be executed without any interference). 
 \end{itemize}
 
-Performance Evaluations conducted:
+\emph{Performance Evaluations conducted:}
 \begin{itemize}
   \item OS Noise (FTQ, FWQ, Hour Glass) \cite{AzeleaOSNoise}
   \item IO offload acceleration \cite{AzeleaIOAccerleration}
